--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "nodemon --inspect dist/index.js",
     "build": "tsc",
     "start": "node dist/index.js",
-    "test": "jest"
+    "test": "jest -i"
   },
   "dependencies": {
     "@types/jest": "^29.5.4",
