--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@types/jest": "^29.5.4",
     "@types/supertest": "^2.0.12",
     "body-parser": "^1.20.2",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "jest": "^29.7.0",
+    "mongodb": "^6.1.0",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.1"
   },
