--- a/tsconfig.json
+++ b/tsconfig.json
@@ -107,6 +107,6 @@
     "skipLibCheck": true,                                /* Skip type checking all .d.ts files. */
     "allowSyntheticDefaultImports": true,
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "src/runAfterAllTests.ts"],
   "exclude": ["node_modules", "**/*.test.ts"],
 }
