--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "jest": "^29.7.0",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.1.0",
     "node-gyp": "^9.4.0",
     "supertest": "^6.3.3",
@@ -27,6 +28,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.4",
     "@types/node": "^20.6.0",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
