--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
   "dependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/jest": "^29.5.4",
+    "@types/nodemailer": "^6.4.13",
     "@types/supertest": "^2.0.12",
+    "@types/uuid": "^9.0.6",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "date-fns": "^2.30.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
@@ -23,8 +26,10 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.1.0",
     "node-gyp": "^9.4.0",
+    "nodemailer": "^6.9.7",
     "supertest": "^6.3.3",
-    "ts-jest": "^29.1.1"
+    "ts-jest": "^29.1.1",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
