--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.1.0",
+    "ngrok": "^5.0.0-beta.2",
     "node-gyp": "^9.4.0",
     "nodemailer": "^6.9.7",
     "supertest": "^6.3.3",
