--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "inversify": "5.0.5",
     "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.1.0",
@@ -30,6 +31,7 @@
     "ngrok": "^5.0.0-beta.2",
     "node-gyp": "^9.4.0",
     "nodemailer": "^6.9.7",
+    "reflect-metadata": "^0.1.13",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
     "uuid": "^9.0.1"
