--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
-    "inversify": "5.0.5",
+    "inversify": "^6.0.2",
     "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.1.0",
@@ -43,6 +43,6 @@
     "@types/node": "^20.6.0",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
+    "typescript": "4.9.4"
   }
 }
